--- a/AceleraDev/DataScience/Semana 3/Aula 05, 06, 08, 10 - Analise Exploratoria.ipynb
+++ b/AceleraDev/DataScience/Semana 3/Aula 05, 06, 08, 10 - Analise Exploratoria.ipynb
@@ -199,6 +199,113 @@
     "# A Curtose maior que zero representa uma curva leptocúrtica, ou seja, mais afunilada"
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estatística descritiva multivariada (Verifica antes o conteúdo da aula 07)\n",
+    "\n",
+    "Nesta parte estaremos em busca de **perguntas** e **hipóteses**\n",
+    "\n",
+    "#### Perguntas\n",
+    "- Qual a cidade com a média de aluguel mais cara?\n",
+    "- Quantos banheiros existem nas residências com aluguéis mais caros?\n",
+    "- Os imóveis mais caros aceitam animal?\n",
+    "- Os imóveis mais caros são mobiliados?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Qual a cidade com a média de aluguel mais alta?\n",
+    "df.groupby('city').agg({\"valor_aluguel\": [\"mean\",\"median\"]}).sort_values(('valor_aluguel', 'mean'), ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Quantos banheiros em média existem nas residencias com aluguéis mais altos\n",
+    "df.valor_aluguel.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vamos considerar aluguéis mais altos como os 25% maiores (acima de 5000)\n",
+    "valorAlto = df.valor_aluguel.describe()[\"75%\"]\n",
+    "df[df.valor_aluguel > valorAlto].bathroom.mean().round(0)\n",
+    "# Com isso podemos afirmar que os aluguéis mais caros possuem em média 4 banheiros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Os imóveis mais caros aceitam animais?\n",
+    "df[df.valor_aluguel > valorAlto].animal.value_counts().acept/df[df.valor_aluguel > valorAlto].animal.count()\n",
+    "# Com isso podemos ver que 82% dos aluguéis mais caros aceitam animais"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Os imóveis mais caros são mobiliados?\n",
+    "df[df.valor_aluguel > valorAlto].furniture.value_counts().furnished / df[df.valor_aluguel > valorAlto].furniture.count()\n",
+    "# Assim podemos ver que apenas 35% dos imóveis mais caros são mobiliados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hipóteses\n",
+    "- São Paulo tem o aluguel mais caro\n",
+    "- Quanto mais banheiros em um imóvel maior o valor do aluguel\n",
+    "-  Os imóveis com mobilia tem o aluguel mais alto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# São Paulo tem o aluguel mais caro\n",
+    "df[['valor_aluguel', 'bathroom']].corr(method='spearman')\n",
+    "# O valor é acima de 0,7 representando uma correlação alta entre as variáveis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exibindo a correlação de todos os valores 'int64' com o valor do aluguel\n",
+    "df.select_dtypes('int64').corr().valor_aluguel.sort_values(ascending=False)"
+   ]
+  },
+ "metadata": {
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
