Sem 3 Aula 10 - Prática de visualização dos dados

--- a/AceleraDev/DataScience/Semana 3/Aula 05, 06, 08, 10 - Analise Exploratoria.ipynb
+++ b/AceleraDev/DataScience/Semana 3/Aula 05, 06, 08, 10 - Analise Exploratoria.ipynb
@@ -300,6 +300,83 @@
     "df.select_dtypes('int64').corr().valor_aluguel.sort_values(ascending=False)"
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualização de dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.countplot(x = 'city', data = df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,6))\n",
+    "plt.title(\"Média do valor de aluguel por cidade\")\n",
+    "sns.barplot(x='city', y='valor_aluguel', data = df.groupby('city').agg({'valor_aluguel':'mean'}).reset_index())\n",
+    "plt.xticks(rotation = 90)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.distplot(df['valor_aluguel'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.scatterplot(x='valor_aluguel', y='bathroom', data=df, hue='city', size='animal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.heatmap(df.corr(), annot=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.FacetGrid(df, col='city', row='animal')\n",
+    "g = g.map(plt.hist, 'valor_aluguel')"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "codemirror_mode": {
