Adicionado conteúdos e desafio da semana 8

--- a/AceleraDev/DataScience/Semana 08 - Ciclo de Desenvolvimento/Semana 08.ipynb
+++ b/AceleraDev/DataScience/Semana 08 - Ciclo de Desenvolvimento/Semana 08.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.scatterplot(X['GrLivArea'], Y, X['OverallQual'])"
+    "sns.scatterplot(X['GrLivArea'], y, X['OverallQual'])"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = sns.JointGrid(x=X['GrLivArea'], y=Y)\n",
+    "grid = sns.JointGrid(x=X['GrLivArea'], y=y)\n",
     "grid.plot_joint(plt.scatter, color = 'g')\n",
     "plt.plot([a_x, b_x], [a_y, b_y], linewidth=2)"
    ]
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.fit(X=X, y=Y)"
+    "reg.fit(X=X, y=y)"
    ]
   }
  ],
